Alignment correction

--- a/style.css
+++ b/style.css
@@ -61,7 +61,8 @@ nav {
 }
 
 #hero {
-    height: 100vh;
+    height: auto;
+    min-height: 100vh;
     display: flex;
     align-items: center;
     text-align: justify;
@@ -287,7 +288,7 @@ footer {
 }
 
 .description-link {
-    color: var(--accent-color);
+    color: #3480d1;
     text-decoration: none;
     font-weight: 500;
     transition: 0.3s;
